@@ -1,3 +1,4 @@
+1/24/11 #2608, change ruler fix to work with fixed RulerNode superclass
 1/18/11 #2608, fix play area ruler, not horizontally aligned with laser origin
 # 2.03.00 (38019) Jan 11, 2010
 1/11/10 public version for milestone "full redeploy, 2010 Q1"
