@@ -1,3 +1,4 @@
+1/24/2011 #2678, fix RulerNode so that it's not doing odd things to its bounds
 1/24/2011 Added getters and setters to Time Speed Slider classes
 1/16/2011 Made Property.getInitialValue protected to keep the API for Property as simple as possible for typical usage,
     but possible to override for applications which require knowledge about the initial value such as Gravity and Orbits
